--- a/src/Styles/_theme4.scss
+++ b/src/Styles/_theme4.scss
@@ -10,8 +10,14 @@ $header: (
     "usual": #e3e6eb,
     "visited": #e3e6eb,
     "pressed": #f4f5f5,
-    "hover": ##f4f5f5
+    "hover": #f4f5f5
   )
+);
+
+$app_headings: (
+  "outline": transparent,
+  "shadow": transparent,
+  "text": #000
 );
 
 $app_columns: (
@@ -19,7 +25,7 @@ $app_columns: (
     "gradient-bottom": #2c323b,
     "gradient-top": #292f37
   ),
-  "text": #e3e6eb (header is styled)
+  "text": #e3e6eb
 );
 
 $search_keywords: (
@@ -49,12 +55,15 @@ $search_keywords: (
 );
 
 $volumetric_button: (
+  "outline": transparent,
+  "shadow": transparent,
+
   "ordinary": (
     "background": (
       "gradient-bottom": #111317,
       "gradient-top": #1d2127
     ),
-    "text": Styled
+    "text": #fff,
     "box-shadow": #2b638f,
     "border": #0a0c0e
 
@@ -73,7 +82,7 @@ $volumetric_button: (
       "gradient-bottom": #171a1f,
       "gradient-top": #272d35
     ),
-    "text": Styled
+    "text": #fff,
     "box-shadow": #2b638f,
     "border": #0a0c0e
   ),
@@ -82,19 +91,22 @@ $volumetric_button: (
       "gradient-bottom": #0e1114,
       "gradient-top": #191c21
     ),
-    "text": Styled
+    "text": #fff,
     "box-shadow": #2b638f,
     "border": #0a0c0e
   )
 );
 
 $generate_button: (
+  "outline": transparent,
+  "shadow": transparent,
+
   "ordinary": (
     "background": (
       "gradient-bottom": #111317,
       "gradient-top": #1d2127
     ),
-    "text": Styled
+    "text": #fff,
     "box-shadow": #2b638f,
     "border": #0a0c0e
 
@@ -113,7 +125,7 @@ $generate_button: (
       "gradient-bottom": #171a1f,
       "gradient-top": #272d35
     ),
-    "text": Styled
+    "text": #fff,
     "box-shadow": #2b638f,
     "border": #0a0c0e
   ),
@@ -122,19 +134,22 @@ $generate_button: (
       "gradient-bottom": #0e1114,
       "gradient-top": #191c21
     ),
-    "text": Styled
+    "text": #fff,
     "box-shadow": #2b638f,
     "border": #0a0c0e
   )
 );
 
 $copy_button: (
+  "outline": transparent,
+  "shadow": transparent,
+
   "ordinary": (
     "background": (
       "gradient-bottom": #5a677a,
       "gradient-top": #95a1b1
     ),
-    "text": styled,
+    "text": #fff,
     "box-shadow": #111417,
     "border": #111417
   ),
@@ -152,7 +167,7 @@ $copy_button: (
       "gradient-bottom": #515d6d,
       "gradient-top": #8a97a8
     ),
-    "text": styled,
+    "text": #fff,
     "box-shadow": #111417,
     "border": #111417
   ),
@@ -161,7 +176,7 @@ $copy_button: (
       "gradient-bottom": #39414d,
       "gradient-top": #576476
     ),
-    "text": styled,
+    "text": #fff,
     "box-shadow": #111417,
     "border": #111417
   )
