--- a/src/Styles/_theme3.scss
+++ b/src/Styles/_theme3.scss
@@ -14,6 +14,12 @@ $header: (
   )
 );
 
+$app_headings: (
+  "outline": transparent,
+  "shadow": transparent,
+  "text": #000
+);
+
 $app_columns: (
   "background": (
     "gradient-bottom": #dbeffd,
@@ -49,6 +55,9 @@ $search_keywords: (
 );
 
 $volumetric_button: (
+  "outline": transparent,
+  "shadow": rgba(0,0,0,0.1),
+
   "ordinary": (
     "background": (
       "gradient-bottom": #6194be,
@@ -84,11 +93,14 @@ $volumetric_button: (
     ),
     "text": #f5fafa,
     "box-shadow": #2b638f,
-    "border": #2b638fc
+    "border": #2b638f
   )
 );
 
 $generate_button: (
+  "outline": transparent,
+  "shadow": rgba(0,0,0,0.1),
+
   "ordinary": (
     "background": (
       "gradient-bottom": #6194be,
@@ -124,11 +136,14 @@ $generate_button: (
     ),
     "text": #f5fafa,
     "box-shadow": #2b638f,
-    "border": #2b638fc
+    "border": #2b638f
   )
 );
 
 $copy_button: (
+  "outline": transparent,
+  "shadow": rgba(0,0,0,0.1),
+
   "ordinary": (
     "background": (
       "gradient-bottom": #fbc877,
