--- a/src/Styles/_theme2.scss
+++ b/src/Styles/_theme2.scss
@@ -190,6 +190,8 @@ $search_filter: (
 	"header": (
 		"background": #731d08,
 		"text": #f2eee5,
+    "ineligible_color": #ff0000,
+    "eligible_color": #68d968,
 
 		"option_buttons": (
 			"ordinary": (
