--- a/src/Styles/_theme3.scss
+++ b/src/Styles/_theme3.scss
@@ -191,6 +191,8 @@ $search_filter: (
 	"header": (
 		"background": #41999e,
 		"text": #f5fafa,
+    "ineligible_color": #b90000,
+    "eligible_color": #68d968,
 
 		"option_buttons": (
 			"ordinary": (
