--- a/src/Styles/_theme5.scss
+++ b/src/Styles/_theme5.scss
@@ -191,6 +191,8 @@ $search_filter: (
 	"header": (
 		"background": #1b1b1b,
 		"text": #e5e5e5,
+    "ineligible_color": #ff0000,
+    "eligible_color": #68d968,
 
 		"option_buttons": (
 			"ordinary": (
