--- a/src/Styles/_theme1.scss
+++ b/src/Styles/_theme1.scss
@@ -190,6 +190,8 @@ $search_filter: (
 	"header": (
 		"background": #2a223a,
 		"text": #f5fafa,
+    "ineligible_color": #ff0000,
+    "eligible_color": #68d968,
 
 		"option_buttons": (
 			"ordinary": (
