--- a/src/Styles/_theme1.scss
+++ b/src/Styles/_theme1.scss
@@ -1,6 +1,12 @@
 $app_general: (
   "text": #000,
-  "background": #b6c8a9
+  "background": #b6c8a9,
+  "link": (
+    "usual": #2a223a,
+    "visited": #2a223a,
+    "pressed": #403954,
+    "hover": #403954
+  )
 );
 
 $header: (
