--- a/src/Styles/_theme2.scss
+++ b/src/Styles/_theme2.scss
@@ -1,6 +1,12 @@
 $app_general: (
   "text": #000,
-  "background": #dad6c8
+  "background": #dad6c8,
+  "link": (
+    "usual": #2a223a,
+    "visited": #2a223a,
+    "pressed": #403954,
+    "hover": #403954
+  )
 );
 
 $header: (
