--- a/src/Styles/_theme5.scss
+++ b/src/Styles/_theme5.scss
@@ -1,6 +1,12 @@
 $app_general: (
   "text": #e2e2e2,
-  "background": #242424
+  "background": #242424,
+  "link": (
+    "usual": #7d8b9f,
+    "visited": #7d8b9f,
+    "pressed": #647388,
+    "hover": #647388
+  )
 );
 
 $header: (
@@ -17,7 +23,7 @@ $header: (
 $app_headings: (
   "outline": #732222,
   "shadow": rgba(0,0,0,0.34),
-  "text": #fff
+  "text": #bcbcbc
 );
 
 $app_columns: (
@@ -63,7 +69,7 @@ $volumetric_button: (
       "gradient-bottom": #131313,
       "gradient-top": #1e1e1e
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #0c0c0c,
     "border": #0c0c0c
 
@@ -82,7 +88,7 @@ $volumetric_button: (
       "gradient-bottom": #1a1a1a,
       "gradient-top": #2c2c2c
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #0c0c0c,
     "border": #0c0c0c
   ),
@@ -91,7 +97,7 @@ $volumetric_button: (
       "gradient-bottom": #111111,
       "gradient-top": #1c1c1c
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #0c0c0c,
     "border": #0c0c0c
   )
@@ -106,7 +112,7 @@ $generate_button: (
       "gradient-bottom": #131313,
       "gradient-top": #1e1e1e
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #0c0c0c,
     "border": #0c0c0c
 
@@ -125,7 +131,7 @@ $generate_button: (
       "gradient-bottom": #1a1a1a,
       "gradient-top": #2c2c2c
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #0c0c0c,
     "border": #0c0c0c
   ),
@@ -134,7 +140,7 @@ $generate_button: (
       "gradient-bottom": #111111,
       "gradient-top": #1c1c1c
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #0c0c0c,
     "border": #0c0c0c
   )
@@ -149,7 +155,7 @@ $copy_button: (
       "gradient-bottom": #666666,
       "gradient-top": #9c9c9c
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #141414,
     "border": #141414
   ),
@@ -167,7 +173,7 @@ $copy_button: (
       "gradient-bottom": #5f5f5f,
       "gradient-top": #959595
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #141414,
     "border": #141414
   ),
@@ -176,7 +182,7 @@ $copy_button: (
       "gradient-bottom": #404040,
       "gradient-top": #636363
     ),
-    "text": #fff,
+    "text": #9c9c9c,
     "box-shadow": #141414,
     "border": #141414
   )
