--- a/src/Styles/_theme3.scss
+++ b/src/Styles/_theme3.scss
@@ -1,5 +1,5 @@
 $app_general: (
-  "text": #000,
+  "text": #3e4e4e,
   "background": #b8d8e8,
   "link": (
     "usual": #2a223a,
@@ -23,7 +23,7 @@ $header: (
 $app_headings: (
   "outline": transparent,
   "shadow": transparent,
-  "text": #000
+  "text": #3e4e4e
 );
 
 $app_columns: (
@@ -31,12 +31,12 @@ $app_columns: (
     "gradient-bottom": #dbeffd,
     "gradient-top": #e2f3ff
   ),
-  "text": #1a2323
+  "text": #3e4e4e
 );
 
 $search_keywords: (
   "container": (
-    "background": #cad7c1,
+    "background": #cee8fa,
     "text": #3d5151
   ),
   "button": (
@@ -50,7 +50,7 @@ $search_keywords: (
       "text": #000
     ),
     "hover": (
-      "background": #d7f0df,
+      "background": #def1ff,
       "text": #3d5151
     ),
     "selected": (
