--- a/src/Styles/_core.scss
+++ b/src/Styles/_core.scss
@@ -606,6 +606,7 @@ a:active {
     margin-top: 3px;
     margin-bottom: 3px;
     padding: .375rem .35rem;
+    appearance: auto !important;
   }
 }
 
